style: fix color issue in highlighting (dark mode)

--- a/src/styles/custom-bytemd.css
+++ b/src/styles/custom-bytemd.css
@@ -1,54 +1,57 @@
-
-.bytemd{
+/* GENERAL BYTEMD STYLE */
+.bytemd {
   height: 500px;
 }
 
-.bytemd, .bytemd-toolbar, .bytemd-body, .bytemd-editor, .CodeMirror {
+.bytemd,
+.bytemd-toolbar,
+.bytemd-body,
+.bytemd-editor,
+.CodeMirror {
   color: inherit;
   background-color: transparent;
   font-family: inherit;
 }
 
-[data-theme="black"] .CodeMirror-cursor {
+/* BYTEMD SELECTION STYLES */
+[data-theme="black"] .CodeMirror-focused .CodeMirror-selected,
+[data-theme="forest"] .CodeMirror-focused .CodeMirror-selected,
+[data-theme="luxury"] .CodeMirror-focused .CodeMirror-selected,
+[data-theme="night"] .CodeMirror-focused .CodeMirror-selected,
+[data-theme="black"] .CodeMirror-selected,
+[data-theme="forest"] .CodeMirror-selected,
+[data-theme="luxury"] .CodeMirror-selected,
+[data-theme="night"] .CodeMirror-selected {
+  background: rgba(255, 255, 255, 0.2);
+}
+
+/* BYTEMD CURSOR STYLES */
+[data-theme="black"] .CodeMirror-cursor,
+[data-theme="forest"] .CodeMirror-cursor,
+[data-theme="night"] .CodeMirror-cursor {
   border-left: 2px solid rgba(255, 255, 255, 0.6);
 }
 
-[data-theme="forest"]  .CodeMirror-cursor {
-  border-left: 2px solid rgba(255, 255, 255, 0.6);
-}
-
-[data-theme="luxury"]  .CodeMirror-cursor {
+[data-theme="luxury"] .CodeMirror-cursor {
   border-left: 2px solid rgb(220, 165, 76);
 }
 
-[data-theme="night"]  .CodeMirror-cursor {
-  border-left: 2px solid rgba(255, 255, 255, 0.6);
-}
-
-[data-theme="lofi"]  .bytemd-fullscreen {
+/* BYTEMD FULLSCREEN BACKGROUND STYLES */
+[data-theme="lofi"] .bytemd-fullscreen,
+[data-theme="corporate"] .bytemd-fullscreen {
   background-color: #fff;
 }
 
-[data-theme="corporate"]  .bytemd-fullscreen {
-  background-color: #fff;
-}
-
-[data-theme="cyberpunk"]  .bytemd-fullscreen {
-  background-color: yellow;
-}
-
-[data-theme="forest"]  .bytemd-fullscreen {
+[data-theme="cyberpunk"] .bytemd-fullscreen,
+[data-theme="forest"] .bytemd-fullscreen,
+[data-theme="black"] .bytemd-fullscreen {
   background-color: #000;
 }
 
-[data-theme="black"]  .bytemd-fullscreen {
-  background-color: #000;
-}
-
-[data-theme="luxury"]  .bytemd-fullscreen {
+[data-theme="luxury"] .bytemd-fullscreen {
   background-color: rgb(9, 9, 11);
 }
 
-[data-theme="night"]  .bytemd-fullscreen {
+[data-theme="night"] .bytemd-fullscreen {
   background-color: rgb(15, 23, 41);
 }
